1-infrastructure/mailhog/mailhog-deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
      - name: mailhog
        image: mailhog/mailhog:latest
        ports:
        - containerPort: 1025
        - containerPort: 8025
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
  namespace: default
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: webui
      port: 8025
      targetPort: 8025
      nodePort: 32025
  type: NodePort
